--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stef Estudio Creativo</title>
+  
+    <title>Stef Estudio Creativo | Branding, Diseño y Desarrollo Web</title>
+    <meta name="description"
+      content="Agencia especializada en branding, diseño y desarrollo web. Creamos identidades de marca, sitios web personalizados y contenido digital a medida para marcas y emprendedores.">
+    <meta name="author" content="Stef Estudio Creativo" />
+    <link rel="canonical" href="https://stefestudiocreativo.netlify.app/" />
+  
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Stef Estudio Creativo | Branding, Diseño y Desarrollo Web" />
+    <meta property="og:description" content="Agencia especializada en branding, diseño y desarrollo web." />
+    <meta property="og:url" content="https://stefestudiocreativo.netlify.app/" />
+    <meta property="og:image" content="https://stefestudiocreativo.netlify.app/logo.png" />
+  
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stef Estudio Creativo | Branding, Diseño y Desarrollo Web" />
+    <meta name="twitter:description" content="Agencia creativa en branding, diseño y desarrollo web." />
+    <meta name="twitter:image" content="https://stefestudiocreativo.netlify.app/logo.png" />
+  
+    <link rel="icon" type="image/png" href="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
