google site verification

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,6 +24,7 @@
     <meta name="twitter:image" content="https://stefestudiocreativo.netlify.app/logo.png" />
   
     <link rel="icon" type="image/png" href="/logo.png" />
+    <meta name="google-site-verification" content="xKfZrHVdQvpBQjFGIowJCWoyUk0aHtxm6NPkCsmMFKw" />
   </head>
   <body>
     <div id="root"></div>
