--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
   
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="google-site-verification" content="xKfZrHVdQvpBQjFGIowJCWoyUk0aHtxm6NPkCsmMFKw" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-D9ZYSQ6X2H');
+    </script>
   </head>
   <body>
     <div id="root"></div>
