google analytics changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="google-site-verification" content="xKfZrHVdQvpBQjFGIowJCWoyUk0aHtxm6NPkCsmMFKw" />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9ZYSQ6X2H"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
